      processed header parameter in
      CriticalHeaderParamsDeferral.getProcessedCriticalHeaderParams().

version 8.16 (2020-04-26)
    * Updates the JCA algorithm names for PS256, PS384 and PS512.

version 8.17 (2020-05-12)
    * Updates JWKMatcher.forJWSHeader to support EdDSA.

version 8.17.1 (2020-05-27)
    * Improves ambiguous JWT claim verification error message (iss #361).

version 8.18 (2020-06-02)
    * Updates JWSVerificationKeySelector to support multiple allowed JWS
      algorithms, replaces getExpectedJWSAlgorithm method with isAllowed (iss
      #353).
    * Fixes JWSHeader.parse ParseException message for non-JWS headers (iss
      #360).

version 8.18.1 (2020-06-03)
    * Reverts removal of JWSVerificationKeySelector.getExpectedJWSAlgorithm
      (iss #362).

version 8.19 (2020-06-03)
    * Adds new static Algorithm.parse method.
    * Adds new static JSONObjectUtils.getBase64URL method.
    * Updates JWKMetadata to allow parsing of null optional parameters.
    * Updates the static RSAKey, ECKey, OctetSequenceKey and OctetKeyPair
      parse(JSONObject) methods to allow null optional parameters (iss
      #358).

version 8.20 (2020-08-06)
    * Adds RestrictedResourceRetriever.getHeaders and setHeaders methods.
    * Updates optional com.google.crypto.tink:tink dependency to 1.3.0.

version 8.20.1 (2020-09-14)
    * JWKSet.parse must ignore unknown key types (kty) (iss #377).

version 8.20.2 (2021-02-03)
    * Adds quick check in ECDSAVerifier to reject ESxxx signatures which length
      doesn't match the expected for the ESxxx algorithm (iss #399).
    * Fixes time unit conversion in DefaultJWKSetCache.getLifespan and
      getRefreshTime (iss #384).
    * Prevent instantiation of unneeded new SecureRandom in
      DefaultJWSVerifierFactory to save resources (iss #385).
    * Makes DefaultJWKSetCache thread-safe (iss #392).
    * Adds new JWKSetWithTimestamp class, for use by DefaultJWKSetCache.